# hopper

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
hopper/: __init__.py  __main__.py  backlog.py  claude.py  cli.py  client.py  code.py  codex.py  config.py  git.py  lodes.py  ore.py  process.py  projects.py  prompt.py  pyenv.py  refine.py  remote.py  runner.py  server.py  sessions.py  ship.py  task.py  tmux.py  tui.py  wait.py
hopper/prompts/: ore.md
prompts/: audit.md  code.md  commit.md  design.md  implement.md  mill.md  prep.md  refine.md  ship.md  shovel.md  task.md
prompts/hop/: SKILL.md
scripts/: codex_eval.py  timing.py
skills/hop/: SKILL.md
test/: conftest.py  test_backlog.py  test_cli.py  test_client.py  test_code.py  test_codex.py  test_git.py  test_lodes.py  test_ore.py  test_process.py  test_projects.py  test_prompt.py  test_pyenv.py  test_refine.py  test_remote.py  test_runner.py  test_server.py  test_sessions.py  test_ship.py  test_task.py  test_tmux.py  test_tui.py  test_wait.py
