[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopper"
version = "0.1.0"
description = "TUI for managing coding agents"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "textual>=1.0.0",
    "platformdirs",
    "setproctitle",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
hop = "hopper.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["test"]
